Prod-EU/force-app/main/default/objects/Dexcom_Invoice_Billing_Address__mdt/Dexcom_Invoice_Billing_Address__mdt.object-meta.xml
<CustomObject>
    <description>Records the Dexcom address for each country</description>
    <label>Dexcom Invoice Billing Address</label>
    <pluralLabel>Dexcom Invoice Billing Address</pluralLabel>
</CustomObject>