Prod-EU/force-app/main/default/objects/Dexcom_Invoice_Billing_Address__mdt/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Tracks the city</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>