Prod-EU/force-app/main/default/objects/Dexcom_Invoice_Billing_Address__mdt/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Records Dexcom Company Name</description>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>