Prod-EU/force-app/main/default/objects/Dexcom_Invoice_Billing_Address__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Records the country code</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>