Prod-EU/force-app/main/default/objects/Dexcom_Invoice_Billing_Address__mdt/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>Records the IBAN Details</description>
    <label>IBAN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>