Prod-EU/force-app/main/default/objects/Dexcom_Invoice_Billing_Address__mdt/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Tracks the zip</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>