Prod-EU/force-app/main/default/objects/Dexcom_Invoice_Billing_Address__mdt/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Tracks the street</description>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>